# arnio

./: .bandit.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .test-branch  .vercelignore  API_REFERENCE.md  ARCHITECTURE.md  AUTO_CLEAN_GUIDE.md  CHANGELOG.md  CLI_REFERENCE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COLAB_SMOKE_TEST.md  CORE_STABILITY_SPRINT.md  DATA_CONTRACT_CI.md  Dockerfile  GSSOC_GUIDE.md  MAINTAINERS.md  Makefile  PROJECT_DIRECTION.md  README.md  ROADMAP.md  SECURITY.md  bench_schema_validate.py  benchmark_oom.py  benchmark_results.json  csv_validator.py  diff_io.txt  docker-compose.yml  fix_whitespace.py  issues_list.md  messy_sales_data.csv  mkdocs.yml  mypy.ini  package-lock.json  package.json  pr146_body.md  pyproject.toml  (+11 more)
.claude/: settings.local.json
.github/: CI_VISIBILITY.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  ISSUE_TRIAGE.md  PR_BODY.md  PR_COMMENT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  labels.yml
.github/DISCUSSION_TEMPLATE/: help.yml  ideas.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_task.yml  feature_request.yml  gssoc_task.yml  new_step.yml  performance_task.yml  refactor_task.yml  testing_task.yml
.github/images/: README
.github/scripts/: pr_guard.py  validate_labels.py
.github/workflows/: arrow-extra-test.yml  asan.yml  benchmark.yml  build_wheels.yml  ci.yml  codeql.yml  compat-matrix.yml  cpp-tests-baseline-phase0.yml  dependency-audit.yml  duckdb-extra-test.yml  examples-smoke.yml  macos-arm64-wheel-smoke.yml  parquet-extra-test.yml  pr-guard.yml  release-dry-run.yml  release-please.yml  security.yml  validate_labels.yml  verify-release-tag-test.yml  website-smoke.yml  (+3 more)
arnio/: __init__.py  _arnio_cpp.py  _arnio_cpp.pyi  _core.py  _core.pyi  _types.py  _version.py  cleaning.py  cli.py  convert.py  csv_validator.py  diff.py  encode_categorical.py  exceptions.py  frame.py  integrations_duckdb.py  io.py  pipeline.py  quality.py  schema.py  schema_export.py  test_index.py
benchmarks/: README.md  auto_clean_10_seed42.csv  baseline.json  benchmark.py  benchmark_auto_clean_memory.py  benchmark_clip_numeric.py  benchmark_combine_columns.py  benchmark_csv.py  benchmark_describe.py  benchmark_from_pandas_memory.py  benchmark_gil_threading.py  benchmark_numeric_parse.py  benchmark_oom.py  benchmark_pipeline_clone.py  benchmark_profile_duplicate_count.py  benchmark_sparse_nulls.csv  benchmark_sparse_nulls.py  benchmark_string_view_overhead.py  benchmark_strip_whitespace.csv  benchmark_strip_whitespace.py  benchmark_to_pandas_overhead.py  benchmark_vs_pandas.py  generate_data.py  generate_pr_summary.py  memory_bench.py  native_benchmark.cpp
bindings/: bind_arnio.cpp
cpp/: CMakeLists.txt
docker/: Dockerfile.dev
docs/: TROUBLESHOOTING.md  bad_csv_troubleshooting.md  chunked_workflows.md  cpp-tests-phase0-baseline.md  custom_pipeline_steps.md  error_recovery_playbook.md  index.md  nullable_dtype_compat.md  remote.md
examples/: README.md  arnio_chunk_reading.py  arnio_duckdb.py  arnio_numpy.py  arnio_numpy_example.py  arnio_pandas.py  arnio_pandas_example.py  arnio_sklearn.py  arnio_with_duckdb.py  arnio_with_numpy.py  arnio_with_pandas.ipynb  arnio_with_pandas.py  arnio_with_sklearn.py  auto_clean_tutorial.py  bad_delimiter.csv  basic_usage.ipynb  basic_usage.py  broken_quotes.csv  check_env.py  corrupted_encoding.csv  custom_step.py  custom_step_with_tests.py  dataset_profile_comparison.ipynb  example_registry.py  financial_csv_example.ipynb  ignite_arnio_cleaning.ipynb  inconsistent_rows.csv  missing_headers.csv  quickstart.py  schema_validation.ipynb  schema_validation.py  sklearn_pipeline.py
scratch/: benchmark.py  chaos_test.py  test_pandas_combine.py
scripts/: check_api_reference_anchors.py  check_docs_utf8.py  check_website.py  check_wheel_parity.py  verify_release_tag.sh
tests/: conftest.py  conftest_mock_cpp.py  smoke_wheel_install.py  test_api_reference_docs.py  test_api_type_checking.py  test_arrow.py  test_audit.py  test_auto_clean.py  test_benchmark_from_pandas.py  test_benchmark_regression.py  test_benchmarks.py  test_benchmarks_smoke.py  test_bool_validation_standalone.py  test_check_env.py  test_chunked_pipeline.py  test_chunked_validation.py  test_ci_visibility_policy.py  test_clean.py  test_cleaning.py  test_cli.py  test_coalesce_columns.py  test_column_move_immutability.py  test_combine_columns.py  test_combine_columns_extra.py  test_compare_column_profiles.py  test_compat_matrix.py  test_concat.py  test_convert.py  test_core.py  test_countrycode_extra.py  test_csv.py  test_csv_chunked.py  test_csv_encoding.py  test_csv_fuzz.py  test_csv_gz.py  test_csv_numeric_parsing.py  test_csv_on_bad_lines.py  test_csv_regression_pr987.py  test_csv_validation_delimiter.py  test_csv_validation_errors.py  (+78 more)
website/: 404.html  README.md  about.html  api.html  architecture.html  benchmarks.html  changelog.html  community.html  contributing.html  docs.html  index.html  roadmap.html
(+82 files in other folders)
