[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arnio"
version = "2.0.0"
description = "Data trust for Python. Validate, clean, and profile DataFrames before everything else."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Anish Raj", email = "anishrajyadav97@gmail.com" },
]
keywords = [
    "data-quality",
    "data-validation",
    "data-cleaning",
    "data-profiling",
    "schema-validation",
    "pandas",
    "polars",
    "dataframe",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=1.5",
]

[project.optional-dependencies]
polars = ["polars>=0.20"]
yaml = ["pyyaml>=6.0"]
all = ["arnio[polars,yaml]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "pyyaml>=6.0",
    "pandas-stubs",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/im-anishraj/arnio"
Documentation = "https://github.com/im-anishraj/arnio#readme"
Repository = "https://github.com/im-anishraj/arnio"
Issues = "https://github.com/im-anishraj/arnio/issues"
Changelog = "https://github.com/im-anishraj/arnio/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["arnio"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["arnio"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
